# botpostman

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
deploy/: backend.env
src/: app.py  config.py  exceptions.py  main.py
src/application/postman/: dto.py  service.py
src/application/subscribers/: dto.py  interfaces.py
src/infra/: logging.py
src/infra/database/: models.py  repositories.py  setup.py
src/infra/database/migrations/: env.py
src/infra/database/migrations/versions/: c0f3ce7a4051_initial.py
src/infra/nats/: setup.py
src/presentation/aiogram/: middleware.py  router.py  setup.py
src/presentation/nats/: collections.py  handler.py
