[tool.poetry]
name = "botpostman"
version = "0.1.0"
description = ""
authors = ["mrmamongo <mrmamongo@engee.cloud>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
nats-py = "^2.3.1"
msgspec = "^0.17.0"
ormsgpack = "^1.2.6"
aiogram = "3.0.0b5"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.19"
aiosqlite = "^0.19.0"
alembic = "^1.11.2"
asyncpg = "^0.28.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
